# nusadb

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
crates/nusadb-btree/: Cargo.toml
crates/nusadb-btree/src/: engine.rs  lib.rs  mvcc.rs  node.rs  store.rs  tree.rs  wal.rs
crates/nusadb-btree/tests/: bench_point_hops.rs  bench_w1b_olc_readers.rs  test_commit_fsync_failstop.rs  test_commit_wal_append_enospc.rs  test_dst_invariants.rs  test_elle_dsg.rs  test_tpcc.rs  test_wal_midlog_corruption.rs
crates/nusadb-capi/: Cargo.toml  README.md
crates/nusadb-capi/include/: nusadb.h
crates/nusadb-capi/src/: lib.rs
crates/nusadb-capi/test/: run.sh  test.c
crates/nusadb-cli/: Cargo.toml
crates/nusadb-cli/src/: lib.rs  main.rs
crates/nusadb-cli/tests/: test_lib.rs  test_tls.rs
crates/nusadb-cli/tests/data/: localhost-cert.pem
crates/nusadb-core/: Cargo.toml
crates/nusadb-core/src/: engine.rs  error.rs  ids.rs  lib.rs  traits.rs
crates/nusadb-e2e/: Cargo.toml
crates/nusadb-e2e/src/: lib.rs
crates/nusadb-e2e/tests/: btree_sql_smoke.rs  end_to_end.rs  functions.rs  ivm.rs  nusascript.rs  plan_cache.rs  procedures.rs  result_cache.rs  sqllogictest.rs  triggers.rs  udf.rs
crates/nusadb-e2e/tests/slt/p10_types/: array.slt  array_ops.slt  bool_cast.slt  int_overflow.slt  interval.slt  json.slt  numeric.slt  temporal.slt  timetz.slt  uuid.slt
crates/nusadb-e2e/tests/slt/p11_vector/: graphrag.slt  hybrid_rrf.slt  vector.slt
crates/nusadb-e2e/tests/slt/p11_views/: materialized.slt  plain.slt
crates/nusadb-e2e/tests/slt/p12_txn/: ddl_in_transaction.slt  for_update.slt  isolation_levels.slt  savepoint_errors.slt  savepoints_nested.slt  transactions.slt
crates/nusadb-e2e/tests/slt/p13_functions/: case_expr.slt  date_time.slt  fts.slt  json_set_returning.slt  math.slt  pattern_match.slt  scalar.slt  string_concat.slt  string_extra.slt  system.slt  uuid_gen.slt
crates/nusadb-e2e/tests/slt/p14_tpch/: tpch_subset.slt
crates/nusadb-e2e/tests/slt/p1_ddl/: create_drop.slt  create_table_as.slt  drop_cascade.slt  information_schema.slt  (+5 more)
crates/nusadb-libnusa/: Cargo.toml
crates/nusadb-libnusa/examples/: latency_probe.rs  tcp_floor.rs
crates/nusadb-libnusa/src/: client.rs  error.rs  lib.rs  pool.rs  transport.rs  value.rs
crates/nusadb-libnusa/tests/: client.rs
crates/nusadb-server/: Cargo.toml
crates/nusadb-server/benches/: alloc.rs
crates/nusadb-server/src/: database_manager.rs  main.rs  tuning.rs
crates/nusadb-server/tests/: test_main.rs
crates/nusadb-sim/: Cargo.toml
crates/nusadb-sim/src/: clock.rs  lib.rs  rng.rs  storage.rs
crates/nusadb-sql/: Cargo.toml
crates/nusadb-sql/benches/: vectorized_filter.rs
crates/nusadb-sql/src/: cancel.rs  copy.rs  display.rs  error.rs  fts.rs  hnsw.rs  interval.rs  json.rs  lib.rs  numeric.rs  params.rs  plan_cache.rs  temporal.rs  udf.rs  vector.rs
crates/nusadb-sql/src/analyzer/: ddl.rs  dml.rs  expr.rs  mod.rs  select.rs  tests.rs  typecheck.rs  window.rs
crates/nusadb-sql/src/ast/: ddl.rs  dml.rs  expr.rs  mod.rs  query.rs  statement.rs
crates/nusadb-sql/src/batch/: array.rs  bytes.rs  convert.rs  decimal.rs  from_scan.rs  json.rs  list.rs  mod.rs  primitive.rs  record_batch.rs  schema.rs  temporal.rs  uuid.rs  validity.rs
crates/nusadb-sql/src/executor/: agg.rs  clock.rs  coldefault.rs  cost.rs  crypto.rs  ddl.rs  dml.rs  eval.rs  function.rs  index_key.rs  instrument.rs  ivm.rs  join.rs  lock_skip.rs  mod.rs  ops.rs  procedure.rs  recursive.rs  rng.rs  row.rs  scan.rs  script.rs  session_ctx.rs  spill_setop.rs  spill_sort.rs  stats.rs  stream.rs  tests.rs  trigger.rs
crates/nusadb-sql/src/parser/: ddl.rs  dml.rs  expr.rs  mod.rs  query.rs  script.rs  select.rs  tests.rs
crates/nusadb-sql/src/planner/: fold.rs  join.rs  lower.rs  mod.rs  plan_types.rs  pushdown.rs
crates/nusadb-sql/src/vectorized/: aggregate.rs  filter.rs  group_aggregate.rs  limit.rs  mod.rs  parallel.rs  project.rs  seq_scan.rs  simd.rs  sort.rs
crates/nusadb-sql/tests/: scan_bench.rs  test_alter_constraint.rs  test_auto_analyze.rs  test_constant_folding.rs  test_copy_batching.rs  test_create_index_external_sort.rs  test_derived_table.rs  test_execute_streaming.rs  test_explain.rs  test_external_sort.rs  test_grace_join.rs  test_index_access_path.rs  test_join_hash_types.rs  test_lock_table.rs  test_on_conflict.rs  test_prepare.rs  test_schema_qualified.rs  test_skip_locked.rs  test_spill_agg.rs  test_spill_differential.rs  test_spill_distinct.rs  test_spill_setop.rs  test_spill_vector_codec.rs  test_update_conflict.rs  test_vacuum.rs  test_vector_index.rs  test_work_mem.rs
crates/nusadb-storage/: Cargo.toml
crates/nusadb-storage/benches/: buffer_pool.rs  disk_io.rs  page_insert.rs
crates/nusadb-storage/src/: buffer_pool.rs  catalog.rs  disk.rs  lib.rs  page.rs  toast.rs
crates/nusadb-storage/src/btree/: mod.rs  node.rs  tree.rs
crates/nusadb-storage/tests/: test_buffer_pool.rs  test_catalog.rs  test_corruption.rs  test_direct_io.rs  test_disk.rs  test_fault_injection.rs  test_toast.rs  test_tree.rs  test_tree_proptest.rs
crates/nusadb-test-utils/: Cargo.toml
crates/nusadb-test-utils/src/: lib.rs
crates/nusadb-wal/: Cargo.toml
crates/nusadb-wal/benches/: group_commit.rs  wal_append.rs
crates/nusadb-wal/src/: crypto.rs  group_commit.rs  lib.rs  reader.rs  record.rs  writer.rs
crates/nusadb-wal/tests/: test_encryption.rs  test_group_commit.rs  test_reader.rs  test_record.rs
crates/nusadb-wire/: Cargo.toml
crates/nusadb-wire/src/: auth.rs  cancel.rs  cluster.rs  error.rs  frame.rs  lib.rs  messages.rs  metrics.rs  notify.rs  server.rs  tls.rs  value.rs
crates/nusadb-wire/src/auth/: base64.rs  scram.rs
crates/nusadb-wire/tests/: test_frame.rs  test_messages.rs  test_multidatabase.rs  test_server.rs  test_server_lifecycle.rs  test_server_tls.rs
crates/nusadb-wire/tests/data/: ca-cert.pem  localhost-key.pem  mtls-client-cert.pem  mtls-client-key.pem  mtls-server-cert.pem  mtls-server-key.pem
(+54 files in other folders)
