[package]
name         = "nusadb-core"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
description  = "Core types and traits shared across all NusaDB crates (PageId, Lsn, TxnId, PageStore trait)"
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
bytes     = { workspace = true }
bytemuck  = { workspace = true }

[dev-dependencies]
proptest  = { workspace = true }
