[package]
name         = "nusadb-libnusa"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
description  = "libnusa — the reference L1 client for the Nusa Wire Protocol (connection, auth, query, prepared statements, pooling)"
repository   = { workspace = true }

[lib]
name = "nusadb_libnusa"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
nusadb-wire  = { workspace = true }
tokio        = { workspace = true }
rustls       = { workspace = true }
tokio-rustls = { workspace = true }

[dev-dependencies]
nusadb-core = { workspace = true }
nusadb-btree = { workspace = true }
