[package]
name         = "nusadb-sql"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
description  = "L3 — SQL engine: parser (sqlparser-rs), analyzer, planner, executor (vectorized 1024-row batches)"
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
nusadb-core    = { workspace = true }
nusadb-storage = { workspace = true }
thiserror      = { workspace = true }
bytes          = { workspace = true }
sqlparser      = { workspace = true }
regex          = { workspace = true }
ahash          = { workspace = true }
smallvec       = { workspace = true }
tracing        = { workspace = true }
aes-gcm-siv    = { workspace = true }
sha2           = { workspace = true }
# JSON / JSONB value type + operators.
serde_json     = { workspace = true }
# OS entropy for uuid_generate_v4() — a v4 UUID is 16 random bytes; no UUID crate needed.
getrandom      = { workspace = true }

[dev-dependencies]
nusadb-btree      = { workspace = true }
nusadb-test-utils = { workspace = true }
proptest          = { workspace = true }
sqllogictest      = { workspace = true }
criterion         = { workspace = true }

# Bench: vectorized (SIMD) filter path vs row path — the evidence gate for default-on.
[[bench]]
name    = "vectorized_filter"
harness = false
