[package]
name         = "nusadb-test-utils"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
description  = "Shared test helpers for NusaDB crates: temp dirs, page builders, assertion macros"
repository   = { workspace = true }
publish      = false

[lints]
workspace = true

[dependencies]
nusadb-core = { workspace = true }
tempfile    = { workspace = true }
