[package]
name         = "nusadb-wire"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
description  = "L2 — Nusa Wire Protocol (async tokio): TCP framing, TLS, SCRAM-SHA-256, extended query"
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
nusadb-core   = { workspace = true }
nusadb-sql    = { workspace = true }
thiserror     = { workspace = true }
bytes         = { workspace = true }
tokio         = { workspace = true }
tokio-rustls  = { workspace = true }
rustls        = { workspace = true }
ring          = { workspace = true }
subtle        = { workspace = true }
zeroize       = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
nusadb-test-utils = { workspace = true }
nusadb-btree      = { workspace = true }
tokio-test        = { workspace = true }
